k8s/service.yml
apiVersion: v1
kind: Service
metadata: 
  name: sparkjava-svc
  namespace: sparkjava
spec:
  selector:
    app: java-application
  ports:
  - port: 80
    targetPort: 8080
